hotfix(): Commented out windows build from pomxml.

--- a/pom.xml
+++ b/pom.xml
@@ -339,39 +339,39 @@
 <!--                </executions>-->
 <!--            </plugin>-->
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.4.1</version>
-                <executions>
-                    <execution>
-                        <id>create-windows-installer</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>jpackage</executable>
-                            <arguments>
-                                <argument>--type</argument>
-                                <argument>msi</argument>
-                                <argument>--input</argument>
-                                <argument>${project.build.directory}</argument>
-                                <argument>--dest</argument>
-                                <argument>${project.build.directory}/installer</argument>
-                                <argument>--name</argument>
-                                <argument>PIXL-POS</argument>
-                                <argument>--app-version</argument>
-                                <argument>1.0</argument>
-                                <argument>--main-jar</argument>
-                                <argument>PIXL-POS-1.0-jar-with-dependencies.jar</argument>
-                                <argument>--main-class</argument>
-                                <argument>teampixl.com.pixlpos.application.POSApplicationLauncher</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>exec-maven-plugin</artifactId>-->
+<!--                <version>3.4.1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>create-windows-installer</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>exec</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <executable>jpackage</executable>-->
+<!--                            <arguments>-->
+<!--                                <argument>&#45;&#45;type</argument>-->
+<!--                                <argument>msi</argument>-->
+<!--                                <argument>&#45;&#45;input</argument>-->
+<!--                                <argument>${project.build.directory}</argument>-->
+<!--                                <argument>&#45;&#45;dest</argument>-->
+<!--                                <argument>${project.build.directory}/installer</argument>-->
+<!--                                <argument>&#45;&#45;name</argument>-->
+<!--                                <argument>PIXL-POS</argument>-->
+<!--                                <argument>&#45;&#45;app-version</argument>-->
+<!--                                <argument>1.0</argument>-->
+<!--                                <argument>&#45;&#45;main-jar</argument>-->
+<!--                                <argument>PIXL-POS-1.0-jar-with-dependencies.jar</argument>-->
+<!--                                <argument>&#45;&#45;main-class</argument>-->
+<!--                                <argument>teampixl.com.pixlpos.application.POSApplicationLauncher</argument>-->
+<!--                            </arguments>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
