--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.6.4</version>
         </dependency>
+
+        <!-- MaxMind GeoIP2 for IP Geolocation -->
+        <dependency>
+            <groupId>com.maxmind.geoip2</groupId>
+            <artifactId>geoip2</artifactId>
+            <version>2.15.0</version>
+        </dependency>
     </dependencies>
 
     <build>
