--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,20 @@
             <artifactId>geoip2</artifactId>
             <version>2.15.0</version>
         </dependency>
+
+        <!-- Device Detector for detecting device information -->
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
