--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: Build and Package JavaFX Application
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build-linux:
@@ -33,6 +31,10 @@ jobs:
         run: |
           ls -l target/
 
+      - name: Rename JAR to PIXL-POS.jar
+        run: |
+          mv target/PIXL-POS-1.0-jar-with-dependencies.jar target/PIXL-POS.jar
+
       - name: Create Dynamic Tag
         id: create_tag
         run: |
@@ -45,7 +47,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create ${{ env.TAG_NAME }} target/PIXL-POS-1.0.jar --title "Release ${{ env.TAG_NAME }}" --notes "Automated release of PIXL-POS JAR"
+          gh release create ${{ env.TAG_NAME }} --title "Release ${{ env.TAG_NAME }}" --notes "Automated release of PIXL-POS JAR" --target ${{ github.ref }} --json upload_url > release.json
 
       - name: Upload JAR to Release
         uses: actions/upload-release-asset@v1
@@ -53,8 +55,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/PIXL-POS-1.0.jar
-          asset_name: PIXL-POS-1.0.jar
+          asset_path: target/PIXL-POS.jar
+          asset_name: PIXL-POS.jar
           asset_content_type: application/java-archive
 
   build-windows:
@@ -83,12 +85,16 @@ jobs:
         run: |
           dir target
 
-      - name: Upload JAR to Release
+      - name: Rename JAR to PIXL-POS.jar (Windows)
+        run: |
+          Rename-Item target/PIXL-POS-1.0-jar-with-dependencies.jar target/PIXL-POS.jar
+
+      - name: Upload JAR to Release (Windows)
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/PIXL-POS-1.0.jar
-          asset_name: PIXL-POS-1.0.jar
+          asset_path: target/PIXL-POS.jar
+          asset_name: PIXL-POS.jar
           asset_content_type: application/java-archive
