--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Build and Package JavaFX Application
 on:
   push:
 
+
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -42,17 +43,18 @@ jobs:
           COMMIT_HASH=$(git rev-parse --short HEAD)
           echo "TAG_NAME=release-${BRANCH_NAME}-${COMMIT_HASH}" >> $GITHUB_ENV
 
-      - name: Create Release with Dynamic Tag
+      - name: Create GitHub Release
         id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ env.TAG_NAME }}
+          name: ${{ env.TAG_NAME }}
+          body: "Automated release of PIXL-POS JAR"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create ${{ env.TAG_NAME }} --title "Release ${{ env.TAG_NAME }}" --notes "Automated release of PIXL-POS JAR" --target ${{ github.ref }} --json upload_url > release.json
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload JAR to Release
         uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: target/PIXL-POS.jar
@@ -91,8 +93,6 @@ jobs:
 
       - name: Upload JAR to Release (Windows)
         uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: target/PIXL-POS.jar
