--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <version>5.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+
     </dependencies>
 
     <build>
