--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
             <version>1.7.32</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version> <!-- Latest stable version -->
+        </dependency>
+
     </dependencies>
 
     <build>
